src/core-crm/objects/CCE_Payment_Gateway_Settings__c/CCE_Payment_Gateway_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for CCE payment</description>
    <label>CCE Payment Gateway Settings</label>
</CustomObject>