src/core-crm/objects/CCE_Payment_Gateway_Settings__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>