src/core-crm/objects/CCE_Payment_Gateway_Settings__c/fields/TransType_Invoice__c.field-meta.xml
<CustomField>
    <fullName>TransType_Invoice__c</fullName>
    <label>TransType_Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>