src/core-crm/objects/CCE_Payment_Gateway_Settings__c/fields/TransType_PayNow__c.field-meta.xml
<CustomField>
    <fullName>TransType_PayNow__c</fullName>
    <label>TransType_PayNow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>